testsuite/tests/generic_interfaces/duplicate_field_implements/test.out
== foo.lkt ==
foo.lkt:12:1: error: Interface.method is implemented by multiple fields in struct FooStruct: FooStruct.f1, FooStruct.f2
12 | struct FooStruct implements Interface {
   | ^


lkt_compile: Done
